--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "core-hdkey",
+  "name": "satoshi-hdkey",
   "version": "0.0.0",
   "description": "Bitcoin hierarchical deterministic key implementation for NodeJS and browsers",
   "main": "lib/index.js",
@@ -29,11 +29,11 @@
   "dependencies": {
     "bindings": "^1.2.0",
     "buffer": "2.3.0",
-    "core-address": "git://github.com/coinative/core-address",
-    "core-base58": "git://github.com/coinative/core-base58",
-    "core-hash": "git://github.com/coinative/core-hash",
-    "core-key": "git://github.com/coinative/core-key",
-    "core-sjcl": "git://github.com/coinative/core-sjcl",
+    "satoshi-address": "git://github.com/coinative/satoshi-address",
+    "satoshi-base58": "git://github.com/coinative/satoshi-base58",
+    "satoshi-hash": "git://github.com/coinative/satoshi-hash",
+    "satoshi-key": "git://github.com/coinative/satoshi-key",
+    "satoshi-sjcl": "git://github.com/coinative/satoshi-sjcl",
     "nan": "^1.1.2"
   }
 }
