refactor: move to npm dependencies

--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
   "dependencies": {
     "bindings": "^1.2.0",
     "buffer": "2.3.0",
-    "satoshi-address": "git://github.com/coinative/satoshi-address",
-    "satoshi-base58": "git://github.com/coinative/satoshi-base58",
-    "satoshi-hash": "git://github.com/coinative/satoshi-hash",
-    "satoshi-key": "git://github.com/coinative/satoshi-key",
-    "satoshi-sjcl": "git://github.com/coinative/satoshi-sjcl",
+    "satoshi-address": "0.0.1",
+    "satoshi-base58": "0.0.2",
+    "satoshi-hash": "0.0.1",
+    "satoshi-key": "0.0.1",
+    "satoshi-sjcl": "0.0.2",
     "nan": "^1.1.2"
   }
 }
