--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
     "./lib/derive-module.js": "./lib-browser/derive-module.js"
   },
   "author": "Ben Shepheard <ben@coinative.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/coinative/satoshi-hdkey.git"
+  },
+  "bugs": {
+    "url": "https://github.com/coinative/satoshi-hdkey/issues"
+  },
+  "homepage": "https://github.com/coinative/satoshi-hdkey",
   "license": "MIT",
   "scripts": {
     "install": "node-gyp rebuild",
