--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "browser": {
     "./lib/derive-module.js": "./lib-browser/derive-module.js"
   },
-  "author": "Ben Shepheard <ben@coinative.com>",
+  "contributors": [
+    "Ben Shepheard <ben@coinative.com>",
+    "Dan Howitt <dan@coinative.com>"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/coinative/satoshi-hdkey.git"
